modified process to output to console